add scss files and some html changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="The best shop with plants on the internet!">
     <meta name="author" content="XYZ">
     <meta name="keywords" content="greenharvest, plants, harvesting, shop, greenshop, green">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <title>GreenHarvest</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -22,8 +23,12 @@
             <p class="header__welcome-back">Welcome back</p>
         </header>
         <main class="main-interface">
-            <button class="button main-interface__button-log-in-with-google">Log in with Google</button>
+            <button class="button main-interface__button-log-in-with-google">
+                <p class="main-interface__button-log-in-with-google__text">Log in with Google</p>
+            </button>
+            <div class="vector main-interface__vector"></div>
             <p class="main-inteface__option">or login with email</p>
+            <div class="vector main-interface__vector"></div>
             <form class="main-interface__form" action="#">
                 <label for="email" class="main-inteface__email-label">Email</label>
                 <input type="email" class="main-interface__email-input" placeholder="Your email address" required>
@@ -33,7 +38,10 @@
             <input type="checkbox" class="main-interface-checkbox">
             <p class="main-interface__keep-logged-in">Keep me logged in</p>
             <a href="#" class="main-interface__forgot-password"><p>Forgot your password?</p></a>
-            <button class="button main-interface__button-log-in button--log-in">Log in</button>
+            <button class="button main-interface__button-log-in button--log-in">
+                <p class="main-interface__button-log-in__text">Log in</p>
+            </button>
+            <div class="vector main-interface__vector"></div>
             <p class="main-interface__sign-up">Don't have an account?
                 <a href="#" class="main-interface_sign-up__highlighted">Sign up!</a></p>
         </main>
