--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="left">
             <header class="header">
                 <div class="logo header__container">
-                    <img class="logo__img header_logo-img" src="/svg/Logo.svg" alt="logo image">
+                    <img class="logo__img header_logo-img" src="./svg/Logo.svg" alt="logo image">
                     <h1 class="logo__h1 header__logo-h1 ">GreenHarvest</h1>
                 </div>
                 <p class="header__welcome-back">Welcome back</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="right">
             <aside>
-                <img class="aside__flower" src="/svg/Flower.svg" alt="flower"></aside>
+                <img class="aside__flower" src="./svg/Flower.svg" alt="flower"></aside>
         </div>
     </div>
 </body>
